--- a/glade-ad.html
+++ b/glade-ad.html
@@ -51,33 +51,34 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             'propertiesChanged(adSlotId, dataAdUnitPath, width, height)'
         ],
 
-        renderAdSlot: function() {
-            var ad_slot = Polymer.dom(this.root).querySelector(".ad_slot_placeholder");
-            ad_slot.id = this.adSlotId;
-            ad_slot.setAttribute("data-ad-unit-path", this.dataAdUnitPath);
-            ad_slot.setAttribute("width", this.width);
-            ad_slot.setAttribute("height", this.height);
-
-            if (this.dataClickUrl) {
-                ad_slot.setAttribute("data-click-url", this.dataClickUrl);
-            }
-
-            if (this.dataPageUrl) {
-                ad_slot.setAttribute("data-page-url", this.dataPageUrl);
-            }
-
-            if (this.dataJson) {
-                ad_slot.setAttribute("data-json", this.dataJson);
-            }
-
-            console.log(window.glade == undefined ? "Glade object doesn't yet exist." : "Glade Object exists... retrieving ad.");
-            window.glade && glade.run && glade.run(ad_slot);
-        },
-
         propertiesChanged: function(adSlotId, dataAdUnitPath, width, height) {
             Polymer.RenderStatus.afterNextRender(this, function() {
+
                 var ad_slot = Polymer.dom(this.root).querySelector(".ad_slot_placeholder");
-                this.renderAdSlot();
+                ad_slot.id = this.adSlotId;
+                ad_slot.setAttribute("data-ad-unit-path", this.dataAdUnitPath);
+                ad_slot.setAttribute("width", this.width);
+                ad_slot.setAttribute("height", this.height);
+
+                if (this.dataClickUrl) {
+                    ad_slot.setAttribute("data-click-url", this.dataClickUrl);
+                }
+
+                if (this.dataPageUrl) {
+                    ad_slot.setAttribute("data-page-url", this.dataPageUrl);
+                }
+
+                if (this.dataJson) {
+                    ad_slot.setAttribute("data-json", this.dataJson);
+                }
+
+                if (!window.glade || !glade.run) {
+                    window.addEventListener("gladeReady", function() {
+                        glade.run(ad_slot);
+                    });
+                } else {
+                    glade.run(ad_slot);
+                }
             });
         },
 
