--- a/glade-ad.html
+++ b/glade-ad.html
@@ -21,67 +21,84 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         </div>
     </template>
     <script>
-    Polymer({
-        is: 'glade-ad',
-        properties: {
-            adSlotId: {
-                type: String,
-            },
-            dataAdUnitPath: {
-                type: String
-            },
-            width: {
-                type: String
-            },
-            height: {
-                type: String
-            },
-            dataClickUrl: {
-                type: String
-            },
-            dataPageUrl: {
-                type: String
-            },
-            dataJson: {
-                type: String
+        (function() {
+            var gladeReady = !!(window.glade && window.glade.run); // Maybe Glade has already loaded?
+            var elementsWaitingForGlade = [];
+            if (!gladeReady) {
+              window.addEventListener('gladeReady', function listener() {
+                  window.removeEventListener('gladeReady', listener);
+                  gladeReady = true;
+                  for (var i = 0; i < elementsWaitingForGlade.length; i++) {
+                      elementsWaitingForGlade[i]._load();
+                  }
+              });
             }
-        },
 
-        observers: [
-            'propertiesChanged(adSlotId, dataAdUnitPath, width, height)'
-        ],
+            Polymer({
+                is: 'glade-ad',
+                properties: {
+                    adSlotId: {
+                        type: String,
+                    },
+                    dataAdUnitPath: {
+                        type: String
+                    },
+                    width: {
+                        type: String
+                    },
+                    height: {
+                        type: String
+                    },
+                    dataClickUrl: {
+                        type: String
+                    },
+                    dataPageUrl: {
+                        type: String
+                    },
+                    dataJson: {
+                        type: String
+                    }
+                },
 
-        propertiesChanged: function(adSlotId, dataAdUnitPath, width, height) {
-            Polymer.RenderStatus.afterNextRender(this, function() {
+                observers: [
+                    'propertiesChanged(adSlotId, dataAdUnitPath, width, height)'
+                ],
 
-                var ad_slot = Polymer.dom(this.root).querySelector(".ad_slot_placeholder");
-                ad_slot.id = this.adSlotId;
-                ad_slot.setAttribute("data-ad-unit-path", this.dataAdUnitPath);
-                ad_slot.setAttribute("width", this.width);
-                ad_slot.setAttribute("height", this.height);
+                propertiesChanged: function(adSlotId, dataAdUnitPath, width, height) {
+                    Polymer.RenderStatus.afterNextRender(this, function() {
 
-                if (this.dataClickUrl) {
-                    ad_slot.setAttribute("data-click-url", this.dataClickUrl);
-                }
+                        var ad_slot = Polymer.dom(this.root).querySelector(".ad_slot_placeholder");
+                        ad_slot.id = this.adSlotId;
+                        ad_slot.setAttribute("data-ad-unit-path", this.dataAdUnitPath);
+                        ad_slot.setAttribute("width", this.width);
+                        ad_slot.setAttribute("height", this.height);
 
-                if (this.dataPageUrl) {
-                    ad_slot.setAttribute("data-page-url", this.dataPageUrl);
-                }
+                        if (this.dataClickUrl) {
+                            ad_slot.setAttribute("data-click-url", this.dataClickUrl);
+                        }
 
-                if (this.dataJson) {
-                    ad_slot.setAttribute("data-json", this.dataJson);
-                }
+                        if (this.dataPageUrl) {
+                            ad_slot.setAttribute("data-page-url", this.dataPageUrl);
+                        }
 
-                if (!window.glade || !glade.run) {
-                    window.addEventListener("gladeReady", function() {
-                        glade.run(ad_slot);
+                        if (this.dataJson) {
+                            ad_slot.setAttribute("data-json", this.dataJson);
+                        }
                     });
-                } else {
-                    glade.run(ad_slot);
-                }
-            });
-        },
+                },
 
-    });
+                ready: function() {
+                    if (gladeReady) {
+                        this._load();
+                    } else {
+                        elementsWaitingForGlade.push(this);
+                    }
+                },
+
+                _load: function() {
+                    glade.run(ad_slot);
+                },
+            });
+        })();
     </script>
 </dom-module>
