--- a/glade-ad.html
+++ b/glade-ad.html
@@ -21,84 +21,67 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         </div>
     </template>
     <script>
-        (function() {
-            var gladeReady = !!(window.glade && window.glade.run); // Maybe Glade has already loaded?
-            var elementsWaitingForGlade = [];
-            if (!gladeReady) {
-              window.addEventListener('gladeReady', function listener() {
-                  window.removeEventListener('gladeReady', listener);
-                  gladeReady = true;
-                  for (var i = 0; i < elementsWaitingForGlade.length; i++) {
-                      elementsWaitingForGlade[i]._load();
-                  }
-              });
+    Polymer({
+        is: 'glade-ad',
+        properties: {
+            adSlotId: {
+                type: String,
+            },
+            dataAdUnitPath: {
+                type: String
+            },
+            width: {
+                type: String
+            },
+            height: {
+                type: String
+            },
+            dataClickUrl: {
+                type: String
+            },
+            dataPageUrl: {
+                type: String
+            },
+            dataJson: {
+                type: String
             }
+        },
 
-            Polymer({
-                is: 'glade-ad',
-                properties: {
-                    adSlotId: {
-                        type: String,
-                    },
-                    dataAdUnitPath: {
-                        type: String
-                    },
-                    width: {
-                        type: String
-                    },
-                    height: {
-                        type: String
-                    },
-                    dataClickUrl: {
-                        type: String
-                    },
-                    dataPageUrl: {
-                        type: String
-                    },
-                    dataJson: {
-                        type: String
-                    }
-                },
+        observers: [
+            'propertiesChanged(adSlotId, dataAdUnitPath, width, height)'
+        ],
 
-                observers: [
-                    'propertiesChanged(adSlotId, dataAdUnitPath, width, height)'
-                ],
+        propertiesChanged: function(adSlotId, dataAdUnitPath, width, height) {
+            Polymer.RenderStatus.afterNextRender(this, function() {
 
-                propertiesChanged: function(adSlotId, dataAdUnitPath, width, height) {
-                    Polymer.RenderStatus.afterNextRender(this, function() {
+                var ad_slot = Polymer.dom(this.root).querySelector(".ad_slot_placeholder");
+                ad_slot.id = this.adSlotId;
+                ad_slot.setAttribute("data-ad-unit-path", this.dataAdUnitPath);
+                ad_slot.setAttribute("width", this.width);
+                ad_slot.setAttribute("height", this.height);
 
-                        var ad_slot = Polymer.dom(this.root).querySelector(".ad_slot_placeholder");
-                        ad_slot.id = this.adSlotId;
-                        ad_slot.setAttribute("data-ad-unit-path", this.dataAdUnitPath);
-                        ad_slot.setAttribute("width", this.width);
-                        ad_slot.setAttribute("height", this.height);
+                if (this.dataClickUrl) {
+                    ad_slot.setAttribute("data-click-url", this.dataClickUrl);
+                }
 
-                        if (this.dataClickUrl) {
-                            ad_slot.setAttribute("data-click-url", this.dataClickUrl);
-                        }
+                if (this.dataPageUrl) {
+                    ad_slot.setAttribute("data-page-url", this.dataPageUrl);
+                }
 
-                        if (this.dataPageUrl) {
-                            ad_slot.setAttribute("data-page-url", this.dataPageUrl);
-                        }
+                if (this.dataJson) {
+                    ad_slot.setAttribute("data-json", this.dataJson);
+                }
 
-                        if (this.dataJson) {
-                            ad_slot.setAttribute("data-json", this.dataJson);
-                        }
+                if (!window.glade || !glade.run) {
+                    window.addEventListener("gladeReady", function() {
+                        glade.run(ad_slot);
                     });
-                },
-
-                ready: function() {
-                    if (gladeReady) {
-                        this._load();
-                    } else {
-                        elementsWaitingForGlade.push(this);
-                    }
-                },
-
-                _load: function() {
+                } else {
                     glade.run(ad_slot);
-                },
+                }
             });
-        })();
+        },
+
+    });
     </script>
 </dom-module>
